Added GUI element for resolution selection.

--- a/ImageResizer/ImageResizer.csproj
+++ b/ImageResizer/ImageResizer.csproj
@@ -8,6 +8,7 @@
     <Company>ImageResizer</Company>
     <Product />
     <ApplicationIcon>Resources\minimize_arrows.ico</ApplicationIcon>
+    <StartupObject>ImageResizer.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
